<resources>
    <string name="app_name">MixIt</string>
    <string name="title_activity_main">MixIt</string>
    <string name="title_activity_drink"></string>
    <string name="main_register_bt">Register</string>
    <string name="main_login_bt">Login</string>
    <string name="main_tagline_tv">If you have it you can Mixit.</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="google_signin">Sign in with Google</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_random">Mix It!</string>
    <string name="nav_filter">Filter</string>
    <string name="nav_favourites">Favourites</string>
    <string name="filter_failed">Too many ingredients</string>
    <string name="reached_end">Shake to Mix It some more!</string>
    <string name="channel_name">Suggestion Channel</string>
    <string name="channel_description">Provides suggestions for drinks</string>
    <string name="notification_message">Click to see the recipe!</string>
    <string name="still_loading_message">You need to wait just a sec, the apps nearly loaded</string>
    <string name="comeback_messsage">Come back we haven\'t seen you in a while</string>
    <string name="comeback_dialog">Click here to get mixing!</string>
    <string name="nav_item_vodka">Vodka</string>
    <string name="nav_item_rum">Rum</string>
    <string name="nav_item_gin">Gin</string>
    <string name="nav_item_whiskey">Whiskey</string>
    <string name="nav_item_tequila">Tequila</string>
    <string name="action_suggest">Suggested Drink</string>
    <string name="action_signout">Sign Out</string>
    <string name="none_left_message">None left reload</string>
    <string name="title_activity_cards">CardsActivity</string>
    <string name="loading">Loading...</string>
    <string name="demo_short">Lorem Ipsum</string>
    <string name="demo_long">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="drink_ingredients">Ingredients</string>
    <string name="drink_method">Method</string>
</resources>

